--- a/app/css/information.css
+++ b/app/css/information.css
@@ -76,25 +76,7 @@ body {
     overflow: auto;
     padding: 0;
     border: .35rem solid #fff;
-    max-height: 3.63rem;
-    font-size: 14px;
-    line-height: 20px;
-    position: fixed;
-    z-index: 3;
-    top: .8rem;
-    width: 90%;
-    max-width: 400px;
-    min-height: 4.6em;
-    overflow: auto;
-    margin: auto;
-    right: 0;
-    left: 0;
-    word-wrap: break-word;
-    word-break: break-all;
-    color: #4e4e4e;
-    border-radius: 5px;
-    background: #fff;
-    box-sizing: border-box; }
+    max-height: 3.63rem; }
     .information_controller .info_toast .toast_head {
       box-sizing: border-box;
       color: #006ee9;
