--- a/app/css/ring.css
+++ b/app/css/ring.css
@@ -234,7 +234,8 @@
   width: 45%;
   color: #ff5c00; }
 .font_wei {
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 18px; }
 .accident_mask {
   height: 3.55rem; }
 .income_ctrl {
