--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -146,7 +146,7 @@
 	<div class="left" style="width: 65%;height: 48px;">
         <a class="left_btn left">
 			总 
-			<span class="score" id="sum_score">{{data.scoreFix }}</span>
+			<span class="" id="sum_score">{{data.scoreFix }}</span>
 			<span >分</span>
 		</a>
 		<a class="right_center"></a>
