--- a/app/sass/index_part.scss
+++ b/app/sass/index_part.scss
@@ -54,7 +54,7 @@ body {
   padding-top: 0.1rem;
 }
 .cell_hd {
-  height: 50px;
+  height: 49px;
 }
 .cell-circle {
   box-sizing: border-box;
@@ -88,3 +88,6 @@ body {
  .mag-container{
     margin-top:1rem;
  }
+.select_btn {
+  box-sizing: border-box;
+}
