--- a/app/css/index_part.css
+++ b/app/css/index_part.css
@@ -42,7 +42,7 @@ body {
 #pieChartContainer {
   padding-top: 0.1rem; }
 .cell_hd {
-  height: 50px; }
+  height: 49px; }
 .cell-circle {
   box-sizing: border-box;
   width: 1.29rem;
@@ -67,3 +67,5 @@ body {
   background-color: #f5f5f5; }
 .mag-container {
   margin-top: 1rem; }
+.select_btn {
+  box-sizing: border-box; }
