--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -1,5 +1,5 @@
 <!--投保须知 -->
-<link rel="stylesheet" href="css/information.css?rev=bf6071117a7d435b56d77e5d79e8ab2c">
+<link rel="stylesheet" href="css/information.css?rev=saafaf">
 <div  data-ng-init="init()" cg-busy="myPromise" class="information_controller">
 	<div class="infor_head" ng-if="isHaveJob">
 		<img src="img/claim_information/logo.jpg"><span class="head_info">职业告知</span><span class="orange">是否从事以下高危职业？</span>
@@ -14,7 +14,6 @@
 	<div class="infor_head"  ng-if="isHaveHealth">
 		<img src="img/claim_information/logo.jpg"><span class="head_info">健康告知</span>
 	</div>
-
 
 	<div  ng-if="isHaveHealth"  ng-repeat="notice in data.notices">
 		<div class="insurance_name" >
@@ -47,7 +46,7 @@
 	</div>
 	<!-- 职业扩展详情 弹窗 -->
 	<div class="mask" id="popup">
-		<div class="info_toast">
+		<div class="toast info_toast">
 			<!-- <div class="toast_head" ></div> -->
 			<!-- <div class="toast_main"></div> -->
 		</div>
@@ -57,7 +56,7 @@
 	<a class="cut_cell" ng-click="showTip()">
 		部分情况有
 	</a>
-	<a class="cut_cell"  ng-click="goToubao()">
+	<a class="cut_cell" ng-click="goToubao()">
 		以上情况全无
 	</a>
 </div>
