--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -358,8 +358,10 @@ header {
   border: 1px solid #c1c1c1;
   color: #000;
   background-color: #fff;
+  box-sizing: border-box;
 }
 .button_hover {
+  box-sizing: border-box;
   border: none;
   color: #fff;
   background: #5aa8ff;
