--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -123,9 +123,30 @@
 		</div>
 
 	</div>
+</div>
+	<div  class="bt_container">
 
+		<div style="line-height: 25px;">
+			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
+			选择保障期间
+		</div>
+	
+<div  class="bottom_container">
+	<div class="score_container" style="top:-25px; ">
+			<span id="money_score" class="score">20</span>
+			<span class="danwei">年</span>
+	</div>
+	<div id="duration_container">
+		
+		
+	</div>
+	
 
 </div>
+
+
+
+
 <div class="mask" id="popup">
 		<div class="toast_cs toast accident_mask">
 			<div class="income_ctrl">选择年收入<div class="off" id="off"><img src="img/select/off.png"></div></div>
@@ -210,3 +231,20 @@
 </div>
 <script src="js/slider.js?rev=afafafafafafafafsaffafaa"></script>
 <script src="js/select.js?rev=avaafafafafsdfafafafaags"></script>
+<script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
+<script>
+/*	
+var slider = new Slider({
+			id:'#duration_container',
+			text:[
+				'0',
+				'1',
+				'5',
+				'10',
+				'20',
+				'30(年)'
+			]
+		});
+
+		*/
+</script>
