--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -1,5 +1,5 @@
 <!--投保须知 -->
-<link rel="stylesheet" href="css/information.css?rev=saafaf">
+<link rel="stylesheet" href="css/information.css?rev=e423943f3be5f57473fd45ba275eab7c">
 <div  data-ng-init="init()" cg-busy="myPromise" class="information_controller">
 	<div class="infor_head" ng-if="isHaveJob">
 		<img src="img/claim_information/logo.jpg"><span class="head_info">职业告知</span><span class="orange">是否从事以下高危职业？</span>
