--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -130,7 +130,7 @@
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
 			选择保障期间
 		</div>
-	
+	</div>
 <div  class="bottom_container">
 	<div class="score_container" style="top:-25px; ">
 			<span id="money_score" class="score">20</span>
@@ -233,7 +233,7 @@
 <script src="js/select.js?rev=avaafafafafsdfafafafaags"></script>
 <script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
 <script>
-/*	
+/*	*/
 var slider = new Slider({
 			id:'#duration_container',
 			text:[
@@ -246,5 +246,5 @@ var slider = new Slider({
 			]
 		});
 
-		*/
+		
 </script>
