--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -1,5 +1,5 @@
 <!--投保须知 -->
-<link rel="stylesheet" href="css/information.css?rev=saafaf">
+<link rel="stylesheet" href="css/information.css?rev=shkhhfdghhfdhg">
 <div  data-ng-init="init()" cg-busy="myPromise" class="information_controller">
 	<div class="infor_head" ng-if="isHaveJob">
 		<img src="img/claim_information/logo.jpg"><span class="head_info">职业告知</span><span class="orange">是否从事以下高危职业？</span>
@@ -8,7 +8,6 @@
 		<div class="job_info_ctrl" ng-click="showJobDes(jobValue,jobName)" ng-repeat="(jobName,jobValue) in data.job_notice">
 			<div class="job_info" >{{jobName}}</div>
 		</div>
-		
 	</div>
 	
 	<div class="infor_head"  ng-if="isHaveHealth">
