--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -43,7 +43,7 @@
 
 		<div style="line-height: 25px;">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()" style="display: none;">智能测算</span>
+			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()" >智能测算</span>
 		</div>
 		<!--
 		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="showCompute()">保额测算</a>
@@ -117,13 +117,15 @@
 
 	</div>
 </div>
-	<div  class="bt_container">
 
+
+
+<!-- <div  class="bt_container">
 		<div style="line-height: 25px;">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
 			选择保障期间
 		</div>
-	</div>
+</div>
 <div  class="bottom_container">
 	<div class="score_container" style="top:-25px; ">
 			<span id="money_score" class="score">20</span>
@@ -133,12 +135,8 @@
 		
 		
 	</div>
-	
-
 </div>
-
-
-
+ -->
 
 <div class="mask" id="popup">
 		<div class="toast_cs toast accident_mask">
@@ -181,7 +179,7 @@
 	<h4 >保障范围评分标准</h4>
 	<img  ng-src="img/introd_0{{type}}.png" style="width:100%"></div>
 </div>
-
+<!--
 <div class="mask" id="baozhang_compute" style="display: none;">
 <div class="toast" >
 	<div class="close">
@@ -222,11 +220,13 @@
 
 </div>
 </div>
+-->
+
 <script src="js/slider.js?rev=afafafafafafafafsaffafaa"></script>
 <script src="js/select.js?rev=avaafafafafsdfafafafaags"></script>
 <script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
 <script>
-/*	*/
+/*	
 var slider = new Slider({
 			id:'#duration_container',
 			text:[
@@ -238,6 +238,5 @@ var slider = new Slider({
 				'30(年)'
 			]
 		});
-
-		
+*/		
 </script>
