simple auto commit

--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -13,7 +13,7 @@
 	</div>
 	-->
 
-	<div  class="bt_container">
+	<div  class="bt_container" style="margin-top:20px;">
 		<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
 		选择保障项目
 	</div>
