simple auto commit

--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -43,7 +43,7 @@
 
 		<div style="line-height: 25px;">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()" >智能测算</span>
+			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" style="display: none" ng-click="showIntellReckon()" >智能测算</span>
 		</div>
 		<!--
 		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="showCompute()">保额测算</a>
