--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -43,7 +43,7 @@
 
 		<div style="line-height: 25px;">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" style="display: none" ng-click="showIntellReckon()" >智能测算</span>
+			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()" >智能测算</span>
 		</div>
 		<!--
 		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="showCompute()">保额测算</a>
@@ -120,7 +120,8 @@
 
 
 
-<!-- <div  class="bt_container">
+<!-- --> 
+<div  class="bt_container">
 		<div style="line-height: 25px;">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
 			选择保障期间
@@ -133,22 +134,23 @@
 	</div>
 	<div id="duration_container">
 		
-		
 	</div>
 </div>
- -->
+
+
+
 
 <div class="mask" id="popup">
 		<div class="toast_cs toast accident_mask">
-			<div class="income_ctrl">选择年收入<div class="off" id="off"><img src="img/select/off.png"></div></div>
+			<div class="income_ctrl">选择年收入<div class="off" id="off" ng-click="close()"><img src="img/select/off.png"></div></div>
 			<div class="calculate">我们将根据您的年收入测算保额</div>
 			<div class="income_details" id="details">
-				<div class="income">5万以下</div>
-				<div class="income">10万</div>
-				<div class="income">20万</div>
-				<div class="income">30万</div>
-				<div class="income">40万</div>
-				<div class="income">50万以上</div>
+				<div class="income" ng-click="selectInsured($event,0)">5万以下</div>
+				<div class="income" ng-click="selectInsured($event,1)">10万</div>
+				<div class="income" ng-click="selectInsured($event,2)">20万</div>
+				<div class="income" ng-click="selectInsured($event,3)">30万</div>
+				<div class="income" ng-click="selectInsured($event,4)">40万</div>
+				<div class="income" ng-click="selectInsured($event,5)">50万以上</div>
 			</div>
 
 		</div>
@@ -226,7 +228,7 @@
 <script src="js/select.js?rev=avaafafafafsdfafafafaags"></script>
 <script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
 <script>
-/*	
+/*	*/
 var slider = new Slider({
 			id:'#duration_container',
 			text:[
@@ -236,7 +238,10 @@ var slider = new Slider({
 				'10',
 				'20',
 				'30(年)'
-			]
+			],
+			callback:function(score){
+				console.log("...:"+score);
+			}
 		});
-*/		
+		
 </script>
