--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -119,7 +119,7 @@
 </div>
 
 
-<div ng-if="type==2">
+<div ng-show="type==2">
 	<div  class="bt_container">
 			<div style="line-height: 25px;">
 				<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
@@ -128,7 +128,7 @@
 	</div>
 	<div  class="bottom_container">
 		<div class="score_container" style="top:-25px; ">
-				<span id="money_score" class="score">20</span>
+				<span id="duration_score" class="score">0</span>
 				<span class="danwei">年</span>
 		</div>
 		<div id="duration_container">
@@ -186,7 +186,7 @@
 <script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
 <script>
 /*	*/
-var durations = [0,1,5,10,20,30]
+var durations = [0,1,5,10,20,30];
 var slider = new Slider({
 			id:'#duration_container',
 			text:[
@@ -195,11 +195,15 @@ var slider = new Slider({
 				'5',
 				'10',
 				'20',
-				'30(年)'
+				'30'
 			],
 			callback:function(score){
+
+				scoreObj.coverage_period = score;
+				$("#duration_score").html(score);
 				/*
 				console.log(durations[score/2])
+				console.log("...:"+score);
 				console.log("...:"+score);
 				*/
 			}
