--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -242,7 +242,8 @@ header {
   color: #ff5c00; }
 .head_ctrl {
   height: 3rem;
-  overflow: auto; }
+  overflow: auto;
+  margin-bottom: 20px; }
 .head-container {
   position: absolute;
   bottom: 0;
