--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -10,8 +10,8 @@
 
 	header{
 		color:#fff;
-		height:0.6rem;
-		line-height: 0.6rem;
+		height:49px;
+		line-height: 49px;
 		padding:5px 0.2rem 5px 50px;
 		// font-size:0.18rem;
 		font-size: 15px;
@@ -41,7 +41,9 @@
 			text-align: right;
 		}
 	}
-	
+	.titl {
+
+	}
 	header .how{
 		float:right;
 		vertical-align: middle;
