--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -292,7 +292,7 @@ header {
 .head_ctrl {
 	height: 3rem;
 	overflow: auto;
-	// margin-bottom: 45px;
+	margin-bottom: 20px;
 	 // -webkit-overflow-scrolling: touch;
 	   // visibility: hidden;
 }
