--- a/app/css/bd_education_new.css
+++ b/app/css/bd_education_new.css
@@ -3,8 +3,8 @@ body {
   background-color: #f5f5f5; }
 header {
   color: #fff;
-  height: 0.6rem;
-  line-height: 0.6rem;
+  height: 49px;
+  line-height: 49px;
   padding: 5px 0.2rem 5px 50px;
   font-size: 15px; }
 header.icon_4 {
