--- a/app/partials/bd_education_new.html
+++ b/app/partials/bd_education_new.html
@@ -1,5 +1,5 @@
 <header class="icon_{{type}}"  data-ng-init="init()"  cg-busy="educationPromise">
-	我的{{getInsuranceCNname()}}保障 <span class="score">{{data.score}}</span>分
+	<span>我的{{getInsuranceCNname()}}保障</span> <span class="score">{{data.score}}</span>分
 	<span   class="how" ng-click="goOldEducation()">如何投保?</span>
 </header>
 <style>
@@ -88,7 +88,7 @@
     </div>
     <div  ng-if="type==3" class="age-insurance">
         寿险是转嫁死亡风险的工具，应对家庭支柱突然身故造成的收入损失风险。
-        <div class="img-container"><img src="img/index/age.png" /></div>
+        <div class="img-container"><img src="img/index/age.jpg" /></div>
     </div>
 
 <div class="table-container" style="margin-bottom:70px;">
