--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -112,20 +112,40 @@
 		</div>
 
 	</div>
-
-
 </div>
+
+
+
+<!-- --> 
+<div  class="bt_container">
+	<div style="line-height: 25px;">
+		<img src="img/global/dun.png" class="dun">
+		选择保障期间
+		<div style="top:-25px;display:inline-block;">
+			<span id="money_score" class="score">20</span>
+			<span>年</span>
+		</div>
+	</div>
+</div>
+<div  class="bottom_container">
+	
+	<div id="duration_container">
+		
+	</div>
+</div>
+
+
 <div class="mask" id="popup">
 		<div class="toast_cs toast accident_mask">
-			<div class="income_ctrl">选择年收入<div class="off" id="off"><img src="img/select/off.png"></div></div>
+			<div class="income_ctrl">选择年收入<div class="off" id="off" ng-click="close()"><img src="img/select/off.png"></div></div>
 			<div class="calculate">我们将根据您的年收入测算保额</div>
 			<div class="income_details" id="details">
-				<div class="income">5万以下</div>
-				<div class="income">10万</div>
-				<div class="income">20万</div>
-				<div class="income">30万</div>
-				<div class="income">40万</div>
-				<div class="income">50万以上</div>
+				<div class="income" ng-click="selectInsured($event,0)">5万以下</div>
+				<div class="income" ng-click="selectInsured($event,1)">10万</div>
+				<div class="income" ng-click="selectInsured($event,2)">20万</div>
+				<div class="income" ng-click="selectInsured($event,3)">30万</div>
+				<div class="income" ng-click="selectInsured($event,4)">40万</div>
+				<div class="income" ng-click="selectInsured($event,5)">50万以上</div>
 			</div>
 
 		</div>
@@ -156,7 +176,7 @@
 	<h4 >保障范围评分标准</h4>
 	<img  ng-src="img/introd_0{{type}}.png" style="width:100%"></div>
 </div>
-
+<!--
 <div class="mask" id="baozhang_compute" style="display: none;">
 <div class="toast" >
 	<div class="close">
@@ -197,5 +217,26 @@
 
 </div>
 </div>
+-->
+
 <script src="js/slider.js?rev=afafafafafafafafsaffafaa"></script>
 <script src="js/select.js?rev=avaafafafafsdfafafafaags"></script>
+<script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
+<script>
+/*	*/
+var slider = new Slider({
+			id:'#duration_container',
+			text:[
+				'0',
+				'1',
+				'5',
+				'10',
+				'20',
+				'30(年)'
+			],
+			callback:function(score){
+				console.log("...:"+score);
+			}
+		});
+		
+</script>
