--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=f178127f23baf9aea4fffe5a4fef087d">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=478d6ecfd285c0df25a809abc6aac5c2">
 
 <div  cg-busy="myPromise" >
 	<header>
@@ -20,13 +20,13 @@
 		</div>
 	</header>
 
-	<div class="detail-content"  data-ng-init="init()"   >
+	<div class="detail-content"  data-ng-init="init()" >
 		<div class="btn-container" ng-show="data.insurance_plans.length>
 			1"   data-current-select-id="{{data.insurance_plans[0].id}}">
 			<div class="fl-3" ng-repeat="plan in data.insurance_plans" data-id="{{plan.id}}">
 				<a href="javascript:;" class="weui_btn weui_btn_plain_default"   ng-class="{'weui_btn_primary':$index==0}"  data-index="{{$index}}"  ng-click="headSelect($event, plan)"   >{{plan.name}}</a>
 			</div>
-
+			
 		</div>
 		<div id="content_{{$index}}"  ng-show="selectTable==$index" ng-repeat="plan in data.insurance_plans">
 
@@ -79,7 +79,8 @@
 	</div>
 </div>
 <div  class="mask" id="detail_mask_container"  style="display: none;z-index:100000">
-		<div class="head-container">
+	    <div style="height: 20%"></div>
+		<div class="head-container" sytle="height: 80%;">
 			<span class="close" id="close"></span>
 			<div class="fl ">
 				<div class="small_img_ctrl"><img ng-src="{{data.small_image}}" ></div>
@@ -92,10 +93,9 @@
 				<p><span style="color: #ff5c00">*</span>最终购买价格</p>
 				<p>以被保险人身份信息测算为准</p>
 			</div>
-			<div  style="clear:both;height: 1px;"></div>
+			<div  style="clear:both;height: 10px;border-bottom: 1px solid #ccc;margin: 0 18px;"></div>
 	        <div class="head_ctrl">
 	        <div class="select-container">
-	        	<div class="xian"></div>
 	        	<h4>出生日期</h4>
 	        	<input type="date" class="date_ctrl"  min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-model="user.birthday"  name="birthday"  placeholder="yyyy/MM/dd"  ng-change="changeBirthday($event)" ng-click="clickBirthDay($event)">
 	        </div>
@@ -147,6 +147,8 @@
 	<script type="text/javascript" src="js/zepto.min.js"></script>
 <script>
 
+
+
 $(function(){
  $("body").on("click",".td-left",function(){
     $("#popup").find(".toast").html($(this).find("img").attr("title"));
@@ -164,21 +166,7 @@ $(function(){
  	 $(".qa-container").find("li").removeClass("hide");
      $(this).hide();
  });
-  /*
-  $("body").on("click",".more_coverages_button",function(){
-  		var switchValue = $(this).attr("data-switch");
-  		if(switchValue === 'on'){
-	 		$(this).siblings().removeClass("ng-hide");
-	 		$(this).find("span").html("收起");
-	 		$(this).attr("data-switch","off");
-	 		$(this).find("img").addClass("up");
-  		}else{
-  			$(this).siblings(":gt(6)").addClass("ng-hide");
-	 		$(this).find("span").html("查看更多");
-  			$(this).attr("data-switch","on");
-  			$(this).find("img").removeClass("up");
-  		}
- });*/
+
 
 
   $(".tail-container").on("click",".hd",function(){
@@ -188,9 +176,7 @@ $(function(){
   	$("#template-container").children().hide();
   	$("#template-container").children(":eq("+index+")").show();
  });
-/* $(".mask").click(function(){
-    $(this).hide(); 
- });*/
+
 
 Zepto(function($){
 $('#showMask').on('click', function(){
