--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -121,14 +121,13 @@
 	<div style="line-height: 25px;">
 		<img src="img/global/dun.png" class="dun">
 		选择保障期间
-		<div style="top:-25px;display:inline-block;">
-			<span id="money_score" class="score">20</span>
+		<div style="top:-25px;display:inline-block;" class="score2_container">
+			<span id="money_score" class="score" >20</span>
 			<span>年</span>
 		</div>
 	</div>
 </div>
 <div  class="bottom_container">
-	
 	<div id="duration_container">
 		
 	</div>
