--- a/app/css/terms_list.css
+++ b/app/css/terms_list.css
@@ -1,14 +1,15 @@
 @charset "UTF-8";
 .terms_list_ctrl .list_tit {
-  padding: 0 15px;
+  padding: 0 10px;
   background: #006ee9;
   line-height: 60px;
   color: #fff;
   font-size: 15px;
   border-bottom: 1px solid #e2e2e2; }
 .terms_list_ctrl .main {
-  padding-left: 15px; }
+  padding-left: 10px; }
   .terms_list_ctrl .main .word {
+    padding-left: 5px;
     border-bottom: 1px solid #e2e2e2;
     color: #555;
     font-size: 15px;
