--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -44,12 +44,13 @@
 				<span id="money_score" class="score">0</span>
 				<span class="danwei">万</span>
 			</div>
-			<div  style="font-size:15px;color:#999;display: inline-block;margin-left: 22px;" ng-if="type==4 || type ==2">
+			<div  style="font-size:15px;color:#999;display: inline-block;margin-left: 20px;" ng-if="type==4 || type ==2">
 			保1年
 	        </div>
-			<span class="intell-reck" ng-click="showIntellReckon()" >智能测算</span>
-			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()" ng-if="type==4">智能测算</span>
+			<span class="intell-reck" ng-click="showIntellReckon()" ng-if="type==4" style="display: none;" >智能测算</span>
+
+			<!-- <img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
+			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()" ng-if="type==4">智能测算</span> -->
 		</div>
 		<!--
 		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="showCompute()">保额测算</a>
@@ -120,21 +121,43 @@
 
 
 <!-- --> 
-<div  class="bt_container">
-	<div style="line-height: 25px;">
-		<img src="img/global/dun.png" class="dun">
-		选择保障期间
-		<div style="top:-25px;display:inline-block;" class="score2_container">
-			<span id="money_score" class="score" >20</span>
-			<span>年</span>
+<div ng-show="type==2">
+	<div  class="bt_container">
+		<div style="line-height: 25px;">
+			<img src="img/global/dun.png" class="dun">
+			选择保障期间
+			<div style="top:-25px;display:inline-block;" class="score2_container">
+				<span id="duration_score" class="score" >0</span>
+				<span>年</span>
+			</div>
+		</div>
+	</div>
+	<div  class="bottom_container">
+		<div id="duration_container">
+			
 		</div>
 	</div>
 </div>
-<div  class="bottom_container">
-	<div id="duration_container">
-		
+
+
+
+<!-- <div ng-show="type==2">
+	<div  class="bt_container">
+			<div style="line-height: 25px;">
+				<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
+				选择保障期间
+			</div>
 	</div>
-</div>
+	<div  class="bottom_container">
+		<div class="score_container" style="top:-25px; ">
+				<span id="duration_score" class="score">0</span>
+				<span class="danwei">年</span>
+		</div>
+		<div id="duration_container">
+			
+		</div>
+	</div>
+</div> -->
 
 
 <div class="mask" id="popup">
@@ -176,49 +199,6 @@
 	<h4 >保障范围评分标准</h4>
 	<img  ng-src="img/introd_0{{type}}.png" style="width:100%"></div>
 </div>
-<!--
-<div class="mask" id="baozhang_compute" style="display: none;">
-<div class="toast" >
-	<div class="close">
-		<img src="img/close.jpg" ></div>
-	<h3 >保额测算</h3>
-	<h5 >根据收入和负债精准测算保额</h5>
-
-	<div class="cell cell_container ">
-		<div class="cell_hd" >
-			<img src="img/salary.jpg" class="logo" ></div>
-		<div class="cell_hd word">收&nbsp;&nbsp;入</div>
-		<div class="cell_hd  cell_primary " style="height:40px;padding:0 10px;" >
-			<input type="text" class="ipt "    name="salary" min="1951-01-01"  max="2016-12-31"  ng-model="salary"  required></div>
-		<div class="cell_hd danwei" >元/月</div>
-	</div>
-
-	<div class="cell cell_container ">
-		<div class="cell_hd" >
-			<img src="img/home.jpg" class="logo" ></div>
-		<div class="cell_hd word">房&nbsp;&nbsp;贷</div>
-		<div class="cell_hd  cell_primary " style="height:40px;padding:0 10px;" >
-			<input type="text" class="ipt "    name="houseloan" min="1951-01-01"  max="2016-12-31"  ng-model="houseloan"  required></div>
-		<div class="cell_hd danwei" >元/月</div>
-	</div>
-
-	<div class="cell cell_container ">
-		<div class="cell_hd" >
-			<img src="img/car.jpg" class="logo" ></div>
-		<div class="cell_hd word">车&nbsp;&nbsp;贷</div>
-		<div class="cell_hd  cell_primary " style="height:40px;padding:0 10px;" >
-			<input type="text" class="ipt "    name="carloan" min="1951-01-01"  max="2016-12-31"  ng-model="carloan"  required></div>
-		<div class="cell_hd danwei" >元/月</div>
-	</div>
-
-	<div class="cell" style="margin-top:20px;">
-		<a href="javascript:void(0)" class="btn btn_n_primary " >测算</a>
-	</div>
-
-</div>
-</div>
--->
-
 <script src="js/slider.js?rev=afafafafafafafafsaffafaa"></script>
 <script src="js/select.js?rev=avaafafafafsdfafafafaags"></script>
 <script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
