--- a/app/sass/terms_list.scss
+++ b/app/sass/terms_list.scss
@@ -1,9 +1,10 @@
 @import "base/classes.scss";
 @import "base/variables.scss";
 .terms_list_ctrl {
-	.list_tit {padding: 0 15px;background: #006ee9;line-height: 60px;color: #fff;font-size: 15px;border-bottom: 1px solid #e2e2e2;}
-	.main {padding-left: 15px;
+	.list_tit {padding: 0 10px;background: #006ee9;line-height: 60px;color: #fff;font-size: 15px;border-bottom: 1px solid #e2e2e2;}
+	.main {padding-left: 10px;
 		.word {
+			padding-left: 5px;
 			border-bottom: 1px solid #e2e2e2;
 			color: #555;
 			font-size: 15px;
