画圈页+产品条款列表

--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -92,7 +92,7 @@
 		</li>
 	
 	<!-- ng-if="data.policies.length == 0" -->
-		<li ng-click="goDetail('test')"   ><!-- ng-if="data.policies.length == 0" -->
+		<li ng-click="goDetail('test')"   ng-if="data.policies.length == 0">
 			<div class="wrapper">
 				<div class="bg"></div>
 				<div class="title">保单号:22000000001528 <span class="example">示例保单</span></div>
