--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -43,7 +43,7 @@
 
 		<div style="line-height: 25px;">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()" ng-if="type==4">智能测算</span>
+			选择保障金额 <span style="color:#999;"> 最高赔付额 </span><span class="intell-reck" ng-click="showIntellReckon()"  ng-if="type==4">智能测算</span>
 		</div>
 		<!--
 		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="showCompute()">保额测算</a>
@@ -55,7 +55,7 @@
 			<span id="money_score" class="score">0</span>
 			<span class="danwei">万</span>
 	</div>
-	<div  style="position: absolute;right:0;top:-33px; font-size:16px;color:#999;text-align: right;" ng-if="type==4 || type ==2">
+	<div  style="position: absolute;right:0;top:-33px; font-size:16px;color:#999;text-align: right;" ng-if="type==4 || type ==3">
 			保1年
 	</div>
 	
@@ -199,8 +199,10 @@ var slider = new Slider({
 			],
 			callback:function(score){
 
-				scoreObj.coverage_period = score;
+				scoreObj.coveragePeriod = score;
 				$("#duration_score").html(score);
+				console.log(scoreObj);
+				updateSumScore();
 				/*
 				console.log(durations[score/2])
 				console.log("...:"+score);
