simple auto commit

--- a/app/template/new/product_18.html
+++ b/app/template/new/product_18.html
@@ -48,10 +48,10 @@
 	<div class="know-content">
 		<h4>1.承保年龄</h4>
 		<p>本产品承保年龄为出生满30天-65周岁（含30天、65周岁），未成年人累计意外身故保额以保监会规定为准。</p>
-		<h4>2.投保限制</h4>
-		<p>本产品不支持外籍人士购买。</p>
+		<h4>2.保障范围</h4>
+		<p>本产品保障全球范围内的意外事故，但是意外医疗只有符合公费医疗及社会医疗保险支付范围的医疗费用才能理赔（限国内）。</p>
 		<h4 class="hide">3.投保份数</h4>
-		<p class="hide">本产品同一被保险人限投保1次，多投无效，保险公司不承担多投的保险责任。</p>
+		<p class="hide">本产品同一被保险人限投保1次，多投无效，暂不支持港澳台人士和外籍人士投保。</p>
 		<h4 class="hide">4.投保职业限制</h4>
 		<p class="hide">本产品不可投保职业包括：矿业采掘业（不包括办公室工作人员）、林业（不包括办公室工作人员）、海上作业人员、受训新兵、桥梁工程人员、石棉瓦操作工、特种部队、液化气油罐车司机及随车工人、武器弹药研究及管理人员、变压器操作工、高速公路、隧道、地下铁工程人员、拉线安装塔架工人、救难船员、消防员、潜水员、液化气体制造工人、职业运动员、水坝工程人员、海湾、港口工程人员、电缆、架空线操作及维修人员、爆炸品制造和爆破工作人员、军校、警校学员、交通及防暴警察、武打和特技演员、架空作业者、战地记者、前线军人、烟囱清洁工、酸类制造工、驯兽及饲养人员、无固定职业者、从事非法职业者。</p>
 
@@ -83,20 +83,20 @@
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好！可以的，只要医院是二级以上公立医院，且非联合病房和康复病房。
+					您好！可以的，只要是在二级或以上公立医院进行治疗，且非联合病房和康复病房就可以理赔。
 				</div>
 			</div>
 		</li>
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>发生意外如何理赔呢？</div>
+				<div>这份产品保障国外发生的意外吗？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
-				<div>您好！发生意外后，您可以拨打诺贝客服400-992-0205或者友邦客服400-820-3588电话进行理赔报案，并提交相关资料，审核通过后，保险公司将雷培金额转账给客户。</div>
+				<div>您好！本产品保障全球范围内的意外事故，但是意外医疗只有在国内才能理赔，如果您在国外发生了意外事故，在国内治疗发生的社保支付范围内的医疗费用才能进行理赔。</div>
 			</div>
 		</li>
 		<li class="qa-item  question hide">
@@ -109,8 +109,8 @@
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好，本保险医疗保障责任仅针对社保范围内的项目，如满足该条件，您的报销额度为：<br/>
-					情况一：有社保赔付，医保支付8000元，自费支付2000元，本产品可报销：（10000-8000）*100%-100=1900元。<br/>
+					您好，本保险医疗保障责任仅针对社保范围内的项目，如产生的1万医药费满足该条件，您的报销额度为：<br/>
+					情况一：有社保赔付，医保报销8000元，自费支付2000元，本产品可报销：（10000-8000）*100%-100=1900元。<br/>
 					情况二：无社保赔付，自费支付10000元，本产品可报销：10000*80%-100=7900元。
 				</div>
 			</div>
