--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -156,7 +156,7 @@ body {
 			.status{
 				background-color: #999;
 				color:#fff;
-				padding:2px;
+				// padding:2px;
 				font-size:12px;
 			}
 			.status.un-sell{
