--- a/app/template/new/product_37.html
+++ b/app/template/new/product_37.html
@@ -41,7 +41,7 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.承保年龄</h4>
-			<p>0（30天）~55周岁身体健康能正常生活学习工作的人员。</p>
+			<p>30天~55周岁身体健康能正常生活学习工作的人员。</p>
 			<h4>2.保险起期</h4>
 			<p>本保险合同自您成功购买保险的2日后零时开始生效，自生效日零时起开始承担保险责任。</p>
 			<h4>3.额度限制</h4>
