simple auto commit

--- a/app/template/new/product_145.html
+++ b/app/template/new/product_145.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="img/product/jxydqq03.png" ></div>
+				<img src="img/product/zyseyw01.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -41,11 +41,11 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.承保年龄</h4>
-			<p>计划一承保年龄为3-9周岁(含3、9周岁),计划二承保年龄为10-18周岁(含10、18周岁),未成年人累计意外身故保额以保监会规定为准。</p>
+			<p>计划一承保年龄为3-9周岁(含3、9周岁)，计划二承保年龄为10-18周岁(含10、18周岁)，未成年人累计意外身故保额以保监会规定为准。</p>
 			<h4>2.承保范围</h4>
 			<p>承保地域范围为中华人民共和国境内，不包括港澳台地区；	意外伤害医疗的就诊范围为中国境内的二级或二级以上医院。</p>
 			<h4>3.生效时间</h4>
-			<p>本产品购买生成保单后,所对应的保险责任最早于第三日零时生效。</p>
+			<p>本产品购买生成保单后，所对应的保险责任最早于第三日零时生效。</p>
 			<h4 class="hide">4.份数限制 </h4>
 			<p class="hide">本保险计划每一被保险人限投保一份，超出部分无效。</p>
 			<h4 class="hide">5.投保限制 </h4>
