--- a/app/template/new/product_145.html
+++ b/app/template/new/product_145.html
@@ -58,8 +58,8 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/200" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=1" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/237" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=35" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
@@ -67,32 +67,32 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>我要去东南亚能用这个保险吗？</div>	</div>	
+				<div class="qa-content"><div>已经为孩子购买过此类保险（其他保险公司），这款产品还能购买么？购买的话是能和其他保险公司的同时享受理赔么？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，这款产品包括了亚洲（不含中国大陆）、欧洲（包括申根地区）、澳洲、美洲、非洲，因此东南亚或港澳台都是适用的。</div>	
+					<div>您好，少儿意外是可以购买的，可以分别在不同公司理赔，但是要注意关于意外医疗的报销，在一家保险公司报销后在另外一家只能报销差额部分。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>双倍给付啥意思，可以赔两倍钱吗？</div></div>	
+				<div class="qa-content"><div>免赔额和赔付比例是什么意思？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，双倍给付指在搭乘公共交通工具时发生意外事故而造成的身故或伤残可以获得多一倍的赔偿。比如，购买了基础版保险可赔偿身故20万，而如果在乘坐地铁时因出轨造成的死亡，还可额外获得20万赔偿。</div>	
+					<div>您好，免赔额是指社保用药的所有费用扣除100元后进行医疗费用的报销；赔付比例是指社保用药费用扣除100元后剩余费用部分的报销比例。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>旅游时拍照不小心摔坏的相机是不是可以赔的，属于个人的随身财产？</div></div>	
+				<div class="qa-content"><div>发生意外后要保留哪些凭证？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，赔偿个人随身财产需要满足被盗窃、抢劫或任何其他第三方的责任而遗失或意外损坏而造成的损失。如果是个人没有拿稳造成的跌落损失是不在保障范围内的。</div>
+					<div>您好，要保留的凭证包括：二级及二级以上公立医院的门诊或住院病例、有关部门出具的意外事故证明、伤残鉴定报告等，资料准备得越全面获赔速度将更快。</div>
 				</div>
 			</li>
 			</ul>
