simple auto commit

--- a/app/template/new/product_126.html
+++ b/app/template/new/product_126.html
@@ -47,9 +47,9 @@
 <div class="showknow-container" style="display: none;">
 	<div class="know-content">
 		<h4>1.承保年龄</h4>
-		<p>本产品承保年龄为3周岁-65周岁(含3周岁-65周岁)。</p>
+		<p>本产品承保年龄为3周岁-65周岁（含3周岁,65周岁）。</p>
 		<h4>2.承保范围</h4>
-		<p>本产品提供旅行期间(包含一般旅行和户外拓展等高风险运动)因意外事故导致的身故、伤残责任,每次事故医疗费用100元免赔,按医保标准赔付。</p>
+		<p>本产品提供旅行期间（包含一般旅行和户外拓展等高风险运动）因意外事故导致的身故、伤残责任,每次事故医疗费用100元免赔,按医保标准赔付。</p>
 		<h4>3.投保限制</h4>
 		<p>在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国生活或工作半年以上或有居住证，但不承保回原国籍。</p>
 		<h4 class="hide">4.投保份数</h4>
